<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login_first">LoginFirst</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_recycle_view">RecycleView</string>
    <string name="title_activity_data__transfer__recycler_view">Data_Transfer_RecyclerView</string>
    <string name="title_activity_phone__call">Phone_Call</string>
    <string name="title_activity_mentor__tai">Mentor_Tai</string>
    <string name="title_activity_expand">ExpandActivity</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="title_activity_sqlite_db">SQLiteDB</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_shared_preferences">SharedPreferences</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="title_activity_list_contact_recycler_view">ListContactRecyclerView</string>
    <string name="title_activity_display_contact_recycler_view">DisplayContactRecyclerView</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <string name="no_device">Please connect a USB AccessoryController.</string>
    <string name="no_device_bluetooth">Tap to connect with an AccessoryController.</string>
    <string name="button_connect">Tap Here To Connect</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="title_activity_maps">Map</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consequat eu sem, interdum nam a vel. Diam urna in fermentum, vivamus fusce adipiscing mi. Urna libero amet euismod vulputate porttitor, malesuada tortor metus interdum, blandit tincidunt amet sollicitudin dui imperdiet, dolor in, pellentesque hendrerit. Aliquam quam et pariatur rerum, ipsum consequat, quis in.</string>
    <string name="stringDownload">Download</string>
    <string name="stringStatusDownload">Downloading..</string>
    <string name="string_edit_hint_name">Name</string>
    <string name="string_edit_hint_age">Age</string>
    <string name="string_edit_hint_address">Address</string>
    <string name="string_button_add">Add</string>
    <string name="string_button_delete">Delete</string>
    <string name="string_text_login">Login</string>
    <string name="string_text_remenber">Ghi nhớ đăng nhập?</string>
    <string name="string_button_login">Login</string>
    <string name="string_text_forgot">Don\'t forgot your password</string>
    <string name="string_text_register">Register</string>
    <string name="string_button_recyclerview">RecyclerView</string>
    <string name="string_button_phone">Phone Call</string>
    <string name="string_button_mentortai">Mentor Tai</string>
    <string name="string_button_share">SharedPreferences</string>
    <string name="string_button_storage">Storage</string>
    <string name="string_button_fragment">Fragment</string>
    <string name="string_button_service">Service</string>
    <string name="string_button_receiver">Receiver</string>
    <string name="string_button_sending">Sending</string>
    <string name="string_button_toolbar">Toolbar</string>
    <string name="string_button_map">Map</string>
    <string name="string_button_api">API</string>
    <string name="string_button_async">AsyncTask</string>
    <string name="string_button_call">Call</string>
    <string name="string_button_messenger">Messenger</string>
    <string name="string_button_mail">Mail</string>
    <string name="string_button_web">vnexpress.net</string>
    <string name="string_button_chplay">Open Google Play Store</string>
    <string name="string_button_openmap">Open Google Map</string>
    <string name="string_button_selectpicture">Select Picture</string>
    <string name="string_button_camera">Camera</string>
    <string name="string_text_sex">Sex:</string>
    <string name="string_radio_male">Male</string>
    <string name="string_radio_female">Female</string>
    <string name="string_text_hobby">Hobby</string>
    <string name="string_text_music">Nghe nhạc</string>
    <string name="string_text_sport">Thể thao</string>
    <string name="string_text_readbook">Đọc sách</string>
    <string name="string_text_another">Khác</string>
    <string name="string_button_send">Send</string>
    <string name="string_button_startservice">Start Service</string>
    <string name="string_button_stopservice">Stop Service</string>
    <string name="string_text_gamesetting">Game Setting</string>
    <string name="string_text_sound">Sound</string>
    <string name="string_text_brightness">Brightness:</string>
    <string name="string_text_level">Difficulty Level</string>
    <string name="string_radio_easy">Easy</string>
    <string name="string_radio_medium">Medium</string>
    <string name="string_radio_hard">Hard</string>
    <string name="string_button_save">Save</string>
    <string name="string_button_readdata">Read Data</string>
    <string name="string_button_savedata">Save Data</string>
    <string name="string_text_xinchao">Xin chao</string>
    <string name="string_text_status">Status</string>
    <string name="string_text_welcome">Welcom to Android</string>
    <string name="string_text_username">Username:</string>
    <string name="string_text_pass">Password:</string>
    <string name="string_text_lati">Latitude</string>
    <string name="string_text_longi">Longitude</string>
    <string name="string_button_logout">Logout</string>

</resources>
