<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_call"
            android:id="@+id/btnCall"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_messenger"
            android:id="@+id/btnMessenger"
            android:layout_below="@id/btnCall"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_mail"
            android:id="@+id/btnMail"
            android:layout_below="@id/btnMessenger"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_web"
            android:id="@+id/btnWeb"
            android:layout_below="@id/btnMail"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_chplay"
            android:id="@+id/btnCHPlay"
            android:layout_below="@id/btnWeb"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_openmap"
            android:id="@+id/btnMap"
            android:layout_below="@id/btnCHPlay"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_selectpicture"
            android:id="@+id/btnPicture"
            android:layout_below="@id/btnMap"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_camera"
            android:id="@+id/btnCamera"
            android:layout_below="@id/btnPicture"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgPickPic"
            android:layout_below="@+id/btnCamera"/>
    </RelativeLayout>
</LinearLayout>