<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/content_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegister"
            android:text="@string/string_text_register"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"
            android:textColor="#ff2d2d"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/tvRegister"
            android:id="@+id/llLogo"
            >
            <include layout="@layout/item_login_register"></include>
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/grRd"
            android:orientation="horizontal"
            android:layout_below="@+id/llLogo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_sex"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/tv_sex"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdMale"
                android:text="@string/string_radio_male"
                android:layout_marginLeft="20dp"
                android:nextFocusRight="@id/tv_sex"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdFemale"
                android:text="@string/string_radio_female"
                android:layout_marginLeft="20dp"
                android:nextFocusRight="@id/rdMale"/>
        </RadioGroup>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/grRd"
            android:orientation="horizontal"
            android:id="@+id/rlHobby"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_hobby"
                android:id="@+id/tvHobby"
                android:layout_below="@+id/grRd"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkNn"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/tvHobby"
                android:text="@string/string_text_music"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkTt"
                android:layout_below="@+id/tvHobby"
                android:text="@string/string_text_sport"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/chkNn"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkDs"
                android:layout_marginRight="29dp"
                android:layout_below="@+id/chkNn"
                android:text="@string/string_text_readbook"
                android:layout_marginLeft="40dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkKhac"
                android:layout_below="@+id/chkTt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="40dp"
                android:text="@string/string_text_another"
                android:layout_toRightOf="@+id/chkDs"/>
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReg"
            android:layout_below="@+id/rlHobby"
            android:layout_centerHorizontal="true"
            android:text="@string/string_text_register"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</LinearLayout>