<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogin"
            android:text="@string/string_text_login"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"
            android:textColor="#ff2d2d"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/tvLogin"
            android:id="@+id/ln_logo"
            >
            <include layout="@layout/item_login_register"></include>
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckbRemeber"
            android:layout_below="@+id/ln_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/string_text_remenber"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/string_button_login"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/ckbRemeber"
            android:background="@drawable/duongvien_goctron"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/string_text_forgot"
            android:id="@+id/tvDont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDont"
            android:text="@string/string_text_register"
            android:textColor="#018dff"
            android:textSize="20sp"
            android:id="@+id/tvReg"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</LinearLayout>