<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGameSetting"
            android:text="@string/string_text_gamesetting"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSound"
            android:text="@string/string_text_sound"
            android:layout_below="@+id/tvGameSetting"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="30dp"
            />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbSound"
            android:layout_below="@+id/tvSound"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:max="100"
            android:progress="90"
            android:layout_alignRight="@+id/tvGameSetting"
            android:layout_alignEnd="@+id/tvGameSetting"
            android:indeterminate="false"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_text_brightness"
            android:id="@+id/tvBrightness"
            android:layout_below="@+id/sbSound"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbBrightness"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/sbSound"
            android:max="100"
            android:progress="95"
            android:indeterminate="false"
            android:layout_below="@+id/tvBrightness"
            android:layout_marginTop="35dp"
            android:layout_alignRight="@+id/tvGameSetting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_text_level"
            android:id="@+id/tvDiffLevel"
            android:layout_below="@+id/sbBrightness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvDiffLevel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:id="@+id/rgDiffLevel">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_radio_easy"
                android:id="@+id/rbEasy"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_radio_medium"
                android:id="@+id/rbMedium"
                android:checked="false"
                android:layout_marginLeft="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_radio_hard"
                android:id="@+id/rbHard"
                android:checked="false"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_button_save"
            android:id="@+id/btnSave"
            android:layout_below="@+id/rgDiffLevel"
            android:layout_toRightOf="@+id/tvDiffLevel"
            android:onClick="doSave" />

    </RelativeLayout>
</LinearLayout>